seaqt/QtNetwork/gen_qocspresponse.h

class QOcspResponse;
class QSslCertificate;
typedef struct QOcspResponse QOcspResponse;
typedef struct QSslCertificate QSslCertificate;
QOcspResponse* QOcspResponse_new();
QOcspResponse* QOcspResponse_new2(QOcspResponse* other);
void QOcspResponse_operatorAssign(QOcspResponse* self, QOcspResponse* other);
int QOcspResponse_certificateStatus(const QOcspResponse* self);
int QOcspResponse_revocationReason(const QOcspResponse* self);
QSslCertificate* QOcspResponse_responder(const QOcspResponse* self);
QSslCertificate* QOcspResponse_subject(const QOcspResponse* self);
void QOcspResponse_swap(QOcspResponse* self, QOcspResponse* other);